# skillgap-monitor

./: .env.example  .gitignore  CLAUDE.md  PRD_SKILLGAP.md  README.md  init_db.py  pyproject.toml
.claude/skills/audit-skillgap/: SKILL.md
.claude/skills/docs-generator/: SKILL.md
.claude/skills/documenting-python-code/: SKILL.md
.claude/skills/extracting-job-data/: SKILL.md
.claude/skills/managing-database/: SKILL.md
.claude/skills/performance-check/: SKILL.md
.claude/skills/skillgap-review/: SKILL.md
app/: main.py
docs/: PLAN_DZIALANIA.md  RAPORT.md  WBS.md
migrations/: 001_normalize_skill_taxonomy.sql  002_add_is_tech_flag.sql  003_clean_justjoin_salary.sql  004_clean_all_salary_bugs.sql
scraper/scraper/: items.py  pipelines.py  settings.py
scraper/scraper/spiders/: justjoin.py  nofluffjobs.py
