[project]
name = "skillgap-scraper"
version = "0.1.0"
description = "System analityki rynku pracy IT - scraping i analiza ofert pracy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "scrapy>=2.16.0",
    "streamlit>=1.57.0",
]
